--- a/sormas-api/src/main/resources/captions_en-AF.properties
+++ b/sormas-api/src/main/resources/captions_en-AF.properties
@@ -22,6 +22,7 @@ city=City
 postcode=Postcode
 address=Address
 
+#New added by Yahaya, end by the next big space 
 community=Cluster
 clusterNumber=Cluster Number
 formPhase=Form Phase
@@ -36,7 +37,6 @@ dataEntry=Data Entry
 dataImport=Data Import
 importance=Importance
 campaignDataInformation=Campaign Data information
-
 
 saveAndContinue=Save & Continue
 chart=Chart
@@ -106,6 +106,26 @@ dataCompleteness=Data Completeness
 mobileUsers=Mobile Users
 errorStatus=Error Status
 message=Message
+notaValidEmail=Not a Valid Email
+allUsers=All Users
+firstNameRequired=First Name is Required
+lastNameRequired=Last Name is Required
+emailRequired=Email is Required
+enterValidPhoneNumber=Enter a valid Phone Number
+enterStreetHere=Enter street here
+enterHouseNumberHere=Enter House Number here
+enterAdditionalInformationHere=Enter Additional Information here
+enterPostalCodeHere=Enter postal Code here
+enterCityHere=Enter City here
+pleaseFillOutFirstLastname=Please Fill Out a First and Last Name
+userRoleRequired=User Role is Required
+pleaseFillFormAccess=Please Fill out a FormAccess
+salesReport=Sales Report
+fieldInformation=Field Information
+userGuides=User Guides
+technicalGuides=Technical Guides
+
+
 
 
 
