--- a/sormas-api/src/main/resources/descriptions_ps-AF.properties
+++ b/sormas-api/src/main/resources/descriptions_ps-AF.properties
@@ -22,11 +22,16 @@
 Campaign.campaignPhase = This is a preview for a feature that will be implemented later
 Campaign.calculatedBasedOn=Calculated based on
 
+#New added by Yahaya, end by the next big space 
 campaign.dataEntry=\u062F \u0634\u062A\u0647 \u0641\u0648\u0631\u0645\u0648 \u0644\u06CC\u0633\u062A. \u06CC\u0627\u062F\u0648\u0646\u0647: \u062A\u0693\u0644 \u0634\u0648\u064A \u0641\u0648\u0631\u0645\u06D0 \u0627\u0648 \u062E\u062A\u0645 \u0634\u0648\u064A \u0641\u0648\u0631\u0645\u06D0 \u062F\u0644\u062A\u0647 \u0646\u0647 \u069A\u06A9\u0627\u0631\u064A
 campaign.dataImport=Drop down of list of available forms to be imported.
 campaign.importance=\u0644\u0648\u0645\u0693\u06CC \u0641\u0648\u0631\u0645\u0647 \u063A\u0648\u0631\u0647 \u06A9\u0693\u0626
 saveCampaignValidation=Are you sure you want to save the data?
-about.description=The Afghanistan Polio Management Information System (APMIS) is an online data system that simplifies and improves the use and management of polio immunization-related data. APMIS facilitates field data entry, immunization data storage, data visualization, and real-time monitoring of polio immunization activities in Afghanistan.  Using this system will assist in evaluating immunization campaign activities and identifying program challenges.
+about.description=\u062F \u0627\u0641\u063A\u0627\u0646\u0633\u062A\u0627\u0646 \u062F \u067E\u0648\u0644\u06CC\u0648 \u062F \u0645\u062F\u06CC\u0631\u06CC\u062A \u062F \u0645\u0639\u0644\u0648\u0645\u0627\u062A\u0648 \u0633\u06CC\u0633\u067C\u0645 (APMIS) \u06CC\u0648 \u0622\u0646\u0644\u0627\u06CC\u0646 \u0689\u06CC\u067C\u0627 \u0633\u06CC\u0633\u067C\u0645 \u062F\u06CC \u0686\u06D0 \u062F \u067E\u0648\u0644\u06CC\u0648 \u0648\u0627\u06A9\u0633\u06CC\u0646 \u067E\u0648\u0631\u06D0 \u0627\u0693\u0648\u0646\u062F \u0689\u06CC\u067C\u0627 \u06A9\u0627\u0631\u0648\u0644 \u0627\u0648 \u0627\u062F\u0627\u0631\u0647 \u06A9\u0648\u0644 \u0633\u0627\u062F\u0647 \u0627\u0648 \u069A\u0647 \u06A9\u0648\u064A. APMIS \u067E\u0647 \u0627\u0641\u063A\u0627\u0646\u0633\u062A\u0627\u0646 \u06A9\u06D0 \u062F \u0633\u0627\u062D\u0648\u064A \u0645\u0639\u0644\u0648\u0645\u0627\u062A\u0648 \u062F\u0627\u062E\u0644\u0648\u0644\u060C \u062F \u0648\u0627\u06A9\u0633\u06CC\u0646 \u06A9\u0648\u0644\u0648 \u0689\u06CC\u067C\u0627 \u0630\u062E\u06CC\u0631\u0647 \u06A9\u0648\u0644\u060C \u062F \u0645\u0639\u0644\u0648\u0645\u0627\u062A\u0648 \u0644\u06CC\u062F\u060C \u0627\u0648 \u067E\u0647 \u0631\u06CC\u069A\u062A\u06CC\u0646\u064A \u0648\u062E\u062A \u06A9\u06D0 \u062F \u067E\u0648\u0644\u06CC\u0648 \u0648\u0627\u06A9\u0633\u06CC\u0646 \u06A9\u0648\u0644\u0648 \u0641\u0639\u0627\u0644\u06CC\u062A\u0648\u0646\u0648 \u0685\u0627\u0631\u0646\u0647 \u0627\u0633\u0627\u0646\u0647 \u06A9\u0648\u064A. \u062F \u062F\u06D0 \u0633\u06CC\u0633\u067C\u0645 \u06A9\u0627\u0631\u0648\u0644 \u0628\u0647 \u062F \u0645\u0639\u0627\u0641\u06CC\u062A \u06A9\u0645\u067E\u0627\u06CC\u0646 \u0641\u0639\u0627\u0644\u06CC\u062A\u0648\u0646\u0648 \u0627\u0631\u0632\u0648\u0644\u0648 \u0627\u0648 \u062F \u067E\u0631\u0648\u06AB\u0631\u0627\u0645 \u0646\u0646\u06AB\u0648\u0646\u0648 \u067E\u0647 \u067E\u06CC\u0698\u0646\u062F\u0644\u0648 \u06A9\u06D0 \u0645\u0631\u0633\u062A\u0647 \u0648\u06A9\u0693\u064A.
+
+
+
+
 
 
 # CaseData
