--- a/sormas-api/src/main/resources/strings_en-AF.properties
+++ b/sormas-api/src/main/resources/strings_en-AF.properties
@@ -22,8 +22,7 @@
 # General Strings
 active = Active
 
-
-
+#New added by Yahaya, end by the next big space 
 dataSavedSuccessfully=Data saved Successfully
 openCampaign=Open Campaign
 duplicate=Duplicate
