--- a/sormas-api/src/main/resources/captions_en-AF.properties
+++ b/sormas-api/src/main/resources/captions_en-AF.properties
@@ -124,6 +124,10 @@ salesReport=Sales Report
 fieldInformation=Field Information
 userGuides=User Guides
 technicalGuides=Technical Guides
+oldPassword=Old Password
+editing=Editing: 
+
+
 
 
 
