--- a/sormas-api/src/main/resources/captions_ps-AF.properties
+++ b/sormas-api/src/main/resources/captions_ps-AF.properties
@@ -126,6 +126,8 @@ salesReport=Sales Report
 fieldInformation=\u062F \u0633\u0627\u062D\u06D0 \u0645\u0639\u0644\u0648\u0645\u0627\u062A
 userGuides=\u062F \u06A9\u0627\u0631\u0646 \u0644\u0627\u0631\u069A\u0648\u062F
 technicalGuides=\u062A\u062E\u0646\u06CC\u06A9\u064A \u0644\u0627\u0631\u069A\u0648\u062F
+oldPassword=Old Password
+editing=Editing: 
 
 
 
