--- a/sormas-api/src/main/resources/strings_ps-AF.properties
+++ b/sormas-api/src/main/resources/strings_ps-AF.properties
@@ -91,6 +91,12 @@ areYouSureYouWantToDearchiveSelectedRegions=Are you sure you want to De-Archive 
 areYouSureYouWantDearchiveRegion=Are you sure you want to De-archive this Region? 
 areYouSureYouWantToArchiveRegion=Are you sure you want to Archive this Region? 
 supportPageHeaderText=The Afghanistan Polio Management Information System(APMIS) is an online data system for inputting, storing, managing and visualizing monitoring data of polio immunization activities in Afghanistan.
+passwordChangedSuccessfully=Password changed Successfully
+passwordDoesNotMatch=Password does not match
+doYouReallyWantToChangeYourPassword=Do you really want to change your password?
+
+
+
 
 
 
