--- a/sormas-api/src/main/resources/captions_fa-AF.properties
+++ b/sormas-api/src/main/resources/captions_fa-AF.properties
@@ -161,6 +161,9 @@ salesReport=Sales Report
 fieldInformation=\u0627\u0637\u0644\u0627\u0639\u0627\u062A \u0633\u0627\u062D\u0648\u06CC
 userGuides=\u0631\u0627\u0647\u0646\u0645\u0627\u06CC \u06A9\u0627\u0631\u0628\u0631
 technicalGuides=\u0631\u0627\u0647\u0646\u0645\u0627\u06CC \u0641\u0646\u06CC
+oldPassword=Old Password
+editing=Editing: 
+
 
 
 
