--- a/sormas-api/src/main/resources/strings_en-AF.properties
+++ b/sormas-api/src/main/resources/strings_en-AF.properties
@@ -52,7 +52,7 @@ newFormAddedSucces=New Form Added Successfully
 campaignUpdated=Campaign Updated
 pleaseSelectaFormBeforeUpdate=Please select a form before you update
 emailAddressRequired=Email Address is Required
-passwordAccessibility=Password & Accesibility
+passwordAccessibility=Password & Accessibility
 languageRequired=Language is Required
 languageSetingSavedSuccess=Language setting saved successfully
 choosePreferredLanguage=Choose prefered language:
@@ -90,9 +90,9 @@ areYouSureYouWantToDearchiveSelectedRegions=Are you sure you want to De-Archive 
 areYouSureYouWantDearchiveRegion=Are you sure you want to De-archive this Region? 
 areYouSureYouWantToArchiveRegion=Are you sure you want to Archive this Region? 
 supportPageHeaderText=The Afghanistan Polio Management Information System(APMIS) is an online data system for inputting, storing, managing and visualizing monitoring data of polio immunization activities in Afghanistan.
-
-
-
+passwordChangedSuccessfully=Password changed Successfully
+passwordDoesNotMatch=Password does not match
+doYouReallyWantToChangeYourPassword=Do you really want to change your password?
 
 
 
