Unique year in dashboard and i18n #202

--- a/sormas-api/src/main/resources/strings_en-AF.properties
+++ b/sormas-api/src/main/resources/strings_en-AF.properties
@@ -93,8 +93,8 @@ supportPageHeaderText=The Afghanistan Polio Management Information System(APMIS)
 passwordChangedSuccessfully=Password changed Successfully
 passwordDoesNotMatch=Password does not match
 doYouReallyWantToChangeYourPassword=Do you really want to change your password?
-
-
+newUserPassword=New User Password
+pleaseCopyPassword=Please, copy this password, it is shown only once.
 
 
 
