--- a/sormas-api/src/main/resources/strings_fa-AF.properties
+++ b/sormas-api/src/main/resources/strings_fa-AF.properties
@@ -118,8 +118,8 @@ supportPageHeaderText=The Afghanistan Polio Management Information System(APMIS)
 passwordChangedSuccessfully=Password changed Successfully
 passwordDoesNotMatch=Password does not match
 doYouReallyWantToChangeYourPassword=Do you really want to change your password?
-
-
+newUserPassword=\u0631\u0645\u0632 \u0639\u0628\u0648\u0631 \u062C\u062F\u06CC\u062F \u06A9\u0627\u0631\u0628\u0631
+pleaseCopyPassword=\u0644\u0637\u0641\u0627\u064B \u0627\u06CC\u0646 \u0631\u0645\u0632 \u0639\u0628\u0648\u0631 \u0631\u0627 \u06A9\u067E\u06CC \u06A9\u0646\u06CC\u062F\u060C \u0627\u06CC\u0646 \u0631\u0645\u0632 \u0639\u0628\u0648\u0631 \u0641\u0642\u0637 \u06CC\u06A9 \u0628\u0627\u0631 \u0646\u0645\u0627\u06CC\u0634 \u062F\u0627\u062F\u0647 \u0645\u06CC \u0634\u0648\u062F.
 
 
 
