--- a/sormas-api/src/main/resources/strings_ps-AF.properties
+++ b/sormas-api/src/main/resources/strings_ps-AF.properties
@@ -96,8 +96,8 @@ supportPageHeaderText=The Afghanistan Polio Management Information System(APMIS)
 passwordChangedSuccessfully=Password changed Successfully
 passwordDoesNotMatch=Password does not match
 doYouReallyWantToChangeYourPassword=Do you really want to change your password?
-
-
+newUserPassword=\u062F \u0646\u0648\u064A \u06A9\u0627\u0631\u0646 \u067E\u0627\u0633\u0648\u0631\u0689
+pleaseCopyPassword=\u0645\u0647\u0631\u0628\u0627\u0646\u064A \u0648\u06A9\u0693\u0626\u060C \u062F\u0627 \u067E\u0627\u0633\u0648\u0631\u0689 \u06A9\u0627\u067E\u064A \u06A9\u0693\u0626\u060C \u062F\u0627 \u06CC\u0648\u0627\u0632\u06D0 \u06CC\u0648 \u0681\u0644 \u069A\u0648\u062F\u0644 \u0634\u0648\u06CC.
 
 
 
