i18n translation copy to resources file #202

--- a/sormas-api/src/main/resources/captions_en-AF.properties
+++ b/sormas-api/src/main/resources/captions_en-AF.properties
@@ -126,8 +126,8 @@ userGuides=User Guides
 technicalGuides=Technical Guides
 oldPassword=Old Password
 editing=Editing: 
-
-
+apmisVersionNumber=APMIS Version Number : APMIS 5.0.0
+releaseDate=Release Date : 15/08/2023
 
 
 
