--- a/sormas-api/src/main/resources/captions_ps-AF.properties
+++ b/sormas-api/src/main/resources/captions_ps-AF.properties
@@ -38,8 +38,6 @@ dataImport=\u062F \u0645\u0639\u0644\u0648\u0645\u0627\u062A\u0648 \u0648\u0627\
 importance=\u0627\u0647\u0645\u06CC\u062A
 campaignDataInformation=\u062F \u06A9\u0645\u067E\u0627\u06CC\u0646 \u0689\u06CC\u067C\u0627 \u0645\u0639\u0644\u0648\u0645\u0627\u062A
 
-
-
 saveAndContinue=Save & Continue
 chart=Chart
 downloadImportTemplate=\u062F \u0648\u0627\u0631\u062F\u0627\u062A\u0648 \u067C\u06CC\u0645\u067E\u0644\u06CC\u067C \u0641\u0627\u06CC\u0644 \u0689\u0627\u0648\u0646\u0644\u0648\u0689 \u06A9\u0648\u0644
@@ -126,10 +124,10 @@ salesReport=Sales Report
 fieldInformation=\u062F \u0633\u0627\u062D\u06D0 \u0645\u0639\u0644\u0648\u0645\u0627\u062A
 userGuides=\u062F \u06A9\u0627\u0631\u0646 \u0644\u0627\u0631\u069A\u0648\u062F
 technicalGuides=\u062A\u062E\u0646\u06CC\u06A9\u064A \u0644\u0627\u0631\u069A\u0648\u062F
-oldPassword=Old Password
+oldPassword=\u0632\u0648\u0693 \u067E\u067C\u0646\u0648\u0645
 editing=Editing: 
-
-
+apmisVersionNumber=APMIS Version Number : APMIS 5.0.0
+releaseDate=Release Date : 15/08/2023
 
 
 
