--- a/sormas-api/src/main/resources/strings_fa-AF.properties
+++ b/sormas-api/src/main/resources/strings_fa-AF.properties
@@ -79,10 +79,7 @@ confirmPassword=Confirm Password
 choosePassword=Choose a new password for your account  
 
 mustBeAt8Char=*\u062D\u062F\u0627\u0642\u0644 8 \u06A9\u0627\u0631\u0627\u06A9\u062A\u0631 \u0628\u0627\u0634\u062F
-
-//nnnnnnnn
-mustContain1UppercaseChar=*Must contain 1 Uppercase and 1 special character  
-
+mustContain1UppercaseChar=*\u0628\u0627\u06CC\u062F \u062F\u0627\u0631\u0627\u06CC 1 \u062D\u0631\u0648\u0641 \u0628\u0632\u0631\u06AF \u0648 1 \u06A9\u0627\u0631\u0627\u06A9\u062A\u0631 \u062E\u0627\u0635 \u0628\u0627\u0634\u062F  
 apmisJsonGlossary=\u0648\u0627\u0698\u0647 \u0646\u0627\u0645\u0647 APMIS Json
 areSureYouWantToLogout=\u0622\u06CC\u0627 \u0628\u0631\u0627\u06CC \u062E\u0627\u0631\u062C \u0634\u062F\u0646 \u0645\u0637\u0645\u0626\u0646 \u0647\u0633\u062A\u06CC\u062F\u061F
 
@@ -115,9 +112,9 @@ areYouSureYouWantToDearchiveSelectedRegions=Are you sure you want to De-Archive 
 areYouSureYouWantDearchiveRegion=Are you sure you want to De-archive this Region? 
 areYouSureYouWantToArchiveRegion=Are you sure you want to Archive this Region? 
 supportPageHeaderText=The Afghanistan Polio Management Information System(APMIS) is an online data system for inputting, storing, managing and visualizing monitoring data of polio immunization activities in Afghanistan.
-passwordChangedSuccessfully=Password changed Successfully
-passwordDoesNotMatch=Password does not match
-doYouReallyWantToChangeYourPassword=Do you really want to change your password?
+passwordChangedSuccessfully=\u0631\u0645\u0632 \u0639\u0628\u0648\u0631 \u0628\u0627 \u0645\u0648\u0641\u0642\u06CC\u062A \u062A\u063A\u06CC\u06CC\u0631 \u06A9\u0631\u062F
+passwordDoesNotMatch=\u0631\u0645\u0632 \u0639\u0628\u0648\u0631 \u0645\u0637\u0627\u0628\u0642\u062A \u0646\u062F\u0627\u0631\u062F
+doYouReallyWantToChangeYourPassword=\u0622\u06CC\u0627 \u0648\u0627\u0642\u0639\u0627\u064B \u0645\u06CC \u062E\u0648\u0627\u0647\u06CC\u062F \u0631\u0645\u0632 \u0639\u0628\u0648\u0631 \u062E\u0648\u062F \u0631\u0627 \u062A\u063A\u06CC\u06CC\u0631 \u062F\u0647\u06CC\u062F\u061F
 newUserPassword=\u0631\u0645\u0632 \u0639\u0628\u0648\u0631 \u062C\u062F\u06CC\u062F \u06A9\u0627\u0631\u0628\u0631
 pleaseCopyPassword=\u0644\u0637\u0641\u0627\u064B \u0627\u06CC\u0646 \u0631\u0645\u0632 \u0639\u0628\u0648\u0631 \u0631\u0627 \u06A9\u067E\u06CC \u06A9\u0646\u06CC\u062F\u060C \u0627\u06CC\u0646 \u0631\u0645\u0632 \u0639\u0628\u0648\u0631 \u0641\u0642\u0637 \u06CC\u06A9 \u0628\u0627\u0631 \u0646\u0645\u0627\u06CC\u0634 \u062F\u0627\u062F\u0647 \u0645\u06CC \u0634\u0648\u062F.
 
@@ -626,7 +623,7 @@ headingMyTasks = My Tasks
 headingNewAccount = New account
 headingNewCases = New Cases
 headingNewEvents = New Events
-headingNewPassword = New password
+headingNewPassword =\u0631\u0645\u0632 \u0639\u0628\u0648\u0631 \u062C\u062F\u06CC\u062F
 headingChangePassword = \u0631\u0645\u0632 \u0639\u0628\u0648\u0631 \u0631\u0627 \u0628\u0647 \u0631\u0648\u0632 \u06A9\u0646\u06CC\u062F
 headingChangePasswordConfirm = \u0631\u0645\u0632 \u0639\u0628\u0648\u0631 \u062C\u062F\u06CC\u062F \u0631\u0627 \u062A\u0623\u06CC\u06CC\u062F \u06A9\u0646\u06CC\u062F
 headingNewTestResults = New Test Results
