--- a/sormas-api/src/main/resources/strings_en-AF.properties
+++ b/sormas-api/src/main/resources/strings_en-AF.properties
@@ -95,7 +95,7 @@ passwordDoesNotMatch=Password does not match
 doYouReallyWantToChangeYourPassword=Do you really want to change your password?
 newUserPassword=New User Password
 pleaseCopyPassword=Please, copy this password, it is shown only once.
-
+changePasswordForUser=Change Password For User:
 
 
 
