--- a/sormas-api/src/main/resources/strings_ps-AF.properties
+++ b/sormas-api/src/main/resources/strings_ps-AF.properties
@@ -61,7 +61,7 @@ choosePreferredLanguage=\u0645\u0637\u0644\u0648\u0628 \u0698\u0628\u0647 \u063A
 confirmPassword=Confirm Password 
 choosePassword=Choose a new password for your account  
 mustBeAt8Char=* \u0628\u0627\u06CC\u062F \u0644\u0696\u062A\u0631\u0644\u0696\u0647 8 \u062D\u0631\u0648\u0641 \u0648\u064A
-mustContain1UppercaseChar=*Must contain 1 Uppercase and 1 special character  
+mustContain1UppercaseChar=*\u0628\u0627\u06CC\u062F 1 \u0644\u0648\u06CC \u0627\u0648 1 \u0681\u0627\u0646\u06AB\u0693\u06CC \u06A9\u0631\u06A9\u067C\u0631 \u0648\u0644\u0631\u064A  
 apmisJsonGlossary=\u062F APMIS Json \u0644\u063A\u062A\u0646\u0627\u0645\u0647
 areSureYouWantToLogout=\u0627\u06CC\u0627 \u062A\u0627\u0633\u0648 \u0689\u0627\u0689\u0647 \u06CC\u0627\u0633\u062A \u0686\u06D0 \u0628\u0647\u0631 \u0634\u0626\u061F
 selectActiveArchivedRelevance=Select Either Active or Archived Relevance to carry out a bulk action
@@ -98,7 +98,7 @@ passwordDoesNotMatch=\u067E\u067C\u0646\u0648\u0645 \u0633\u0645\u0648\u0646 \u0
 doYouReallyWantToChangeYourPassword=\u0627\u06CC\u0627 \u062A\u0627\u0633\u0648 \u0648\u0627\u0642\u0639\u06CC\u0627 \u063A\u0648\u0627\u0693\u0626 \u062E\u067E\u0644 \u067E\u067C\u0646\u0648\u0645 \u0628\u062F\u0644 \u06A9\u0693\u0626\u061F
 newUserPassword=\u062F \u0646\u0648\u064A \u06A9\u0627\u0631\u0646 \u067E\u0627\u0633\u0648\u0631\u0689
 pleaseCopyPassword=\u0645\u0647\u0631\u0628\u0627\u0646\u064A \u0648\u06A9\u0693\u0626\u060C \u062F\u0627 \u067E\u0627\u0633\u0648\u0631\u0689 \u06A9\u0627\u067E\u064A \u06A9\u0693\u0626\u060C \u062F\u0627 \u06CC\u0648\u0627\u0632\u06D0 \u06CC\u0648 \u0681\u0644 \u069A\u0648\u062F\u0644 \u0634\u0648\u06CC.
-
+changePasswordForUser=Change Password For User:
 
 
 
