- Export button is missing in Report page - Filtering the report based in selected campaign for EOC_Users - Adding "x" for all admin units drop down filters in order to deselect the items in list. - The default view of filters should be shown, and not hidden. (on all pages) - Grid selection in bulk edit mode - #504 - #502 - #500 - #479 - #471 - #470 - #513

--- a/sormas-api/src/main/resources/captions.properties
+++ b/sormas-api/src/main/resources/captions.properties
@@ -1517,6 +1517,7 @@ mainMenuCases=Cases
 mainMenuConfiguration=Configuration
 mainMenuContacts=Contacts
 mainMenuDashboard=Dashboard
+mainMenuAnalyticsDashboard=Analytics Dashboard
 mainMenuEntries=Entries
 mainMenuEvents=Events
 mainMenuImmunizations=Immunizations
