--- a/apmis-flow/pom.xml
+++ b/apmis-flow/pom.xml
@@ -226,6 +226,12 @@
 			<version>3.0.0</version>
 		</dependency>
 
+		<!--dependency>
+			<groupId>org.vaadin.addons.taefi</groupId>
+			<artifactId>toggle-button-group</artifactId>
+			<version>1.0.2</version>
+		</dependency>-->
+
 		<dependency>
 			<groupId>org.vaadin.addons</groupId>
 			<artifactId>vaadin-excel-exporter</artifactId>
