--- a/sormas-api/src/main/resources/captions_en-AF.properties
+++ b/sormas-api/src/main/resources/captions_en-AF.properties
@@ -387,7 +387,7 @@ bulkTaskPriority=Change priority
 
 # Campaign
 campaignActiveCampaigns=Active campaigns
-campaignAllCampaigns=All campaigns
+campaignAllCampaigns=All Campaigns
 campaignAllForms=All forms
 campaignArchivedCampaigns=Archived campaigns
 campaignNewCampaign=New campaign
