#expanding logging audits trail to other buttons on campaign page

--- a/sormas-api/src/main/resources/captions_fa-AF.properties
+++ b/sormas-api/src/main/resources/captions_fa-AF.properties
@@ -314,8 +314,8 @@ actionManualForwardLabMessage=Mark as forwarded
 actionAccept=Accept
 actionReject=Reject
 actionResetEnumCache=Reset enum cache
-actionNo=No
-actionYes=Yes
+actionNo=\u0646\u0647
+actionYes=\u0628\u0644\u0647
 actionYesForAll=Yes, for all
 actionYesForSome=Yes, for some
 actionReset=Reset
