--- a/sormas-api/src/main/resources/captions_ps-AF.properties
+++ b/sormas-api/src/main/resources/captions_ps-AF.properties
@@ -276,8 +276,8 @@ actionManualForwardLabMessage=Mark as forwarded
 actionAccept=Accept
 actionReject=Reject
 actionResetEnumCache=Reset enum cache
-actionNo=No
-actionYes=Yes
+actionNo=\u0646\u0647
+actionYes=\u0647\u0648
 actionYesForAll=Yes, for all
 actionYesForSome=Yes, for some
 actionReset=Reset
