--- a/sormas-api/src/main/resources/enum_fa-AF.properties
+++ b/sormas-api/src/main/resources/enum_fa-AF.properties
@@ -1401,7 +1401,7 @@ UserRole.STATE_OBSERVER = Region \u0645\u0634\u0627\u0647\u062F\u0647 \u06A9\u06
 UserRole.SURVEILLANCE_OFFICER = \u0627\u0641\u0633\u0631 \u0646\u0638\u0627\u0631\u062A
 UserRole.SURVEILLANCE_SUPERVISOR = \u0646\u0627\u0638\u0631 \u0646\u0638\u0627\u0631\u062A
 UserRole.REST_EXTERNAL_VISITS_USER = \u06A9\u0627\u0631\u0628\u0631 \u0628\u0627\u0632\u062F\u06CC\u062F\u0647\u0627\u06CC \u062E\u0627\u0631\u062C\u06CC
-UserRole.REST_USER = ReST User
+UserRole.REST_USER = \u06A9\u0627\u0631\u0628\u0631\u0627\u0646 \u0645\u0628\u0627\u06CC\u0644
 UserRole.SORMAS_TO_SORMAS_CLIENT = Sormas \u0628\u0647 Sormas \u0645\u0634\u062A\u0631\u06CC
 UserRole.ADMIN_SUPERVISOR = \u0633\u0631\u067E\u0631\u0633\u062A \u0646\u0638\u0627\u0631\u062A \u0628\u0631 \u0645\u062F\u06CC\u0631\u06CC\u062A
 UserRole.AREA_STATE_OBSERVER = \u0646\u0627\u0638\u0631 \u0645\u0646\u0637\u0642\u0647 \u0627\u06CC
@@ -1436,7 +1436,7 @@ UserRole.Short.AREA_SURVEILLANCE_SUPERVISOR = \u0647\u0645\u0627\u0647\u0646\u06
 UserRole.Short.ADMIN_SUPERVISOR = AdminSup
 UserRole.Short.SURVEILLANCE_OFFICER = SurvOff
 UserRole.Short.REST_EXTERNAL_VISITS_USER = ExtVis
-UserRole.Short.REST_USER = ReST
+UserRole.Short.REST_USER = \u06A9\u0627\u0631\u0628\u0631\u0627\u0646 \u0645\u0628\u0627\u06CC\u0644
 UserRole.Short.SORMAS_TO_SORMAS_CLIENT = SormasToSormas
 UserRole.Short.BAG_USER = BAG
 
