--- a/sormas-api/src/main/resources/enum_ps-AF.properties
+++ b/sormas-api/src/main/resources/enum_ps-AF.properties
@@ -1403,7 +1403,7 @@ UserRole.REST_EXTERNAL_VISITS_USER = External Visits User
 UserRole.AREA_STATE_OBSERVER = \u0633\u06CC\u0645\u0647 \u0627\u06CC\u0632 \u0685\u0627\u0631\u0648\u0646\u06A9\u06CC
 UserRole.AREA_ADMIN_SUPERVISOR = \u062F \u0627\u062F\u0627\u0631\u06D0 \u0633\u06CC\u0645\u0647 \u0627\u06CC\u0632 \u0647\u0645\u063A\u0696\u064A \u06A9\u0648\u0648\u0646\u06A9\u06CC
 UserRole.AREA_SURVEILLANCE_SUPERVISOR = \u0633\u06CC\u0645\u0647 \u0627\u06CC\u0632 \u0647\u0645\u063A\u0696\u064A \u06A9\u0648\u0648\u0646\u06A9\u064A
-UserRole.REST_USER = ReST \u06A9\u0627\u0631\u0646
+UserRole.REST_USER = \u062F \u0645\u0648\u0628\u0627\u06CC\u0644 \u06A9\u0627\u0631\u0648\u0648\u0646\u06A9\u064A
 UserRole.SORMAS_TO_SORMAS_CLIENT = Sormas \u062A\u0647 Sormas \u067E\u06CC\u0631\u0648\u062F\u0648\u0646\u06A9\u064A
 UserRole.ADMIN_SUPERVISOR = Admin Surveillance Supervisor
 UserRole.BAG_USER = BAG User
@@ -1430,7 +1430,7 @@ UserRole.Short.SURVEILLANCE_SUPERVISOR = SurvSup
 UserRole.Short.ADMIN_SUPERVISOR = AdminSup
 UserRole.Short.SURVEILLANCE_OFFICER = SurvOff
 UserRole.Short.REST_EXTERNAL_VISITS_USER = ExtVis
-UserRole.Short.REST_USER = ReST
+UserRole.Short.REST_USER = \u062F \u0645\u0648\u0628\u0627\u06CC\u0644 \u06A9\u0627\u0631\u0648\u0648\u0646\u06A9\u064A
 UserRole.Short.SORMAS_TO_SORMAS_CLIENT = SormasToSormas
 UserRole.Short.BAG_USER = BAG
 
