--- a/sormas-api/src/main/resources/captions_fa-AF.properties
+++ b/sormas-api/src/main/resources/captions_fa-AF.properties
@@ -162,11 +162,11 @@ fieldInformation=\u0627\u0637\u0644\u0627\u0639\u0627\u062A \u0633\u0627\u062D\u
 userGuides=\u0631\u0627\u0647\u0646\u0645\u0627\u06CC \u06A9\u0627\u0631\u0628\u0631
 technicalGuides=\u0631\u0627\u0647\u0646\u0645\u0627\u06CC \u0641\u0646\u06CC
 oldPassword=\u0631\u0645\u0632 \u0639\u0628\u0648\u0631 \u0642\u062F\u06CC\u0645\u06CC
-editing=Editing: 
-apmisVersionNumber=APMIS Version Number : APMIS 5.0.0
-releaseDate=Release Date : 15/08/2023
-
-
+editing=\u0648\u06CC\u0631\u0627\u06CC\u0634
+apmisVersionNumber=\u0634\u0645\u0627\u0631\u0647 \u0646\u0633\u062E\u0647 APMIS
+releaseDate=\u062A\u0627\u0631\u06CC\u062E \u0627\u0646\u062A\u0634\u0627\u0631
+support=\u067E\u0634\u062A\u06CC\u0628\u0627\u0646\u06CC
+userProfile=\u0645\u0634\u062E\u0635\u0627\u062A \u06A9\u0627\u0631\u0628\u0631
 
 
 
