--- a/sormas-api/src/main/resources/captions_ps-AF.properties
+++ b/sormas-api/src/main/resources/captions_ps-AF.properties
@@ -126,10 +126,14 @@ userGuides=\u062F \u06A9\u0627\u0631\u0646 \u0644\u0627\u0631\u069A\u0648\u062F
 technicalGuides=\u062A\u062E\u0646\u06CC\u06A9\u064A \u0644\u0627\u0631\u069A\u0648\u062F
 oldPassword=\u0632\u0648\u0693 \u067E\u067C\u0646\u0648\u0645
 editing=Editing: 
-apmisVersionNumber=APMIS Version Number : APMIS 5.0.0
-releaseDate=Release Date : 15/08/2023
-
-
+apmisVersionNumber=APMIS Version Number:
+releaseDate=Release Date:
+actionSaveAndAddNew = Save And Add New
+upload=upload
+overridaExistingEntriesWithImportedData=Override existing entries with imported data.
+downloadCredentialsButton=Download Credentials Button
+done=Done
+downloadCsv=Download CSV
 
 
 
