--- a/sormas-api/src/main/resources/strings_en-AF.properties
+++ b/sormas-api/src/main/resources/strings_en-AF.properties
@@ -96,6 +96,11 @@ doYouReallyWantToChangeYourPassword=Do you really want to change your password?
 newUserPassword=New User Password
 pleaseCopyPassword=Please, copy this password, it is shown only once.
 changePasswordForUser=Change Password For User:
+provinceImportModule=Province Import Module
+regionImportModule=Region Import Module
+districtImportModule=District Import Module
+clusterImportModule=Cluster Import Module
+
 
 
 
