--- a/sormas-api/src/main/resources/strings_fa-AF.properties
+++ b/sormas-api/src/main/resources/strings_fa-AF.properties
@@ -37,17 +37,17 @@ pleaseSelectFormFirst=\u0644\u0637\u0641\u0627 \u0627\u0628\u062A\u062F\u0627 \u
 wasRemovedFromCampaign=\u0627\u0632 \u06A9\u0645\u067E\u06CC\u0646 \u062D\u0630\u0641 \u0634\u062F
 newDashboardChartSuccess=\u0646\u0645\u0648\u062F\u0627\u0631 \u062C\u062F\u06CC\u062F \u062F\u0627\u0634\u0628\u0648\u0631\u062F \u0628\u0627 \u0645\u0648\u0641\u0642\u06CC\u062A \u0627\u0636\u0627\u0641\u0647 \u0634\u062F
 pleaseSelectFormUpdate=\u0644\u0637\u0641\u0627\u064B \u0642\u0628\u0644 \u0627\u0632 \u0628\u0647\u200C\u0631\u0648\u0632\u0631\u0633\u0627\u0646\u06CC \u0641\u0631\u0645\u06CC \u0631\u0627 \u0627\u0646\u062A\u062E\u0627\u0628 \u06A9\u0646\u06CC\u062F
-step1=\u0645\u0631\u062D\u0644\u0647 2: \u062F\u0627\u0646\u0644\u0648\u062F \u0642\u0627\u0644\u0628 \u0641\u0627\u06CC\u0644 \u0648\u0631\u0648\u062F\u06CC
+step1=\u0645\u0631\u062D\u0644\u0647 1: \u062F\u0627\u0646\u0644\u0648\u062F \u0642\u0627\u0644\u0628 \u0641\u0627\u06CC\u0644 \u0648\u0631\u0648\u062F\u06CC
 
 //nnnnnnnnnnn
 step1Description=You can use this template .csv file to bring your data into a format APMIS can read. Please do this every time you import data, never use a file you have downloaded before.
 
-step2=\u0645\u0631\u062D\u0644\u0647 3: \u0648\u0627\u0631\u062F \u06A9\u0631\u062F\u0646 \u0641\u0627\u06CC\u0644 CSV
+step2=\u0645\u0631\u062D\u0644\u0647 2: \u0648\u0627\u0631\u062F \u06A9\u0631\u062F\u0646 \u0641\u0627\u06CC\u0644 CSV
 
 //nnnnnnnnnnn
 stepDesciption=Depending on the amount of rows you want to import, this may take a while. You will receive a notification when the import process has finished.
 
-step3=\u0645\u0631\u062D\u0644\u0647 4: \u062F\u0627\u0646\u0644\u0648\u062F \u06AF\u0632\u0627\u0631\u0634 \u062E\u0637\u0627
+step3=\u0645\u0631\u062D\u0644\u0647 3: \u062F\u0627\u0646\u0644\u0648\u062F \u06AF\u0632\u0627\u0631\u0634 \u062E\u0637\u0627
 
 //nnnnnnnnnnn
 step3Description=If there were any rows that could not be imported, you will be offered a .csv file containing all these rows as well as the error descriptions.
@@ -118,6 +118,10 @@ doYouReallyWantToChangeYourPassword=\u0622\u06CC\u0627 \u0648\u0627\u0642\u0639\
 newUserPassword=\u0631\u0645\u0632 \u0639\u0628\u0648\u0631 \u062C\u062F\u06CC\u062F \u06A9\u0627\u0631\u0628\u0631
 pleaseCopyPassword=\u0644\u0637\u0641\u0627\u064B \u0627\u06CC\u0646 \u0631\u0645\u0632 \u0639\u0628\u0648\u0631 \u0631\u0627 \u06A9\u067E\u06CC \u06A9\u0646\u06CC\u062F\u060C \u0627\u06CC\u0646 \u0631\u0645\u0632 \u0639\u0628\u0648\u0631 \u0641\u0642\u0637 \u06CC\u06A9 \u0628\u0627\u0631 \u0646\u0645\u0627\u06CC\u0634 \u062F\u0627\u062F\u0647 \u0645\u06CC \u0634\u0648\u062F.
 changePasswordForUser=Change Password For User:
+provinceImportModule=Province Import Module
+regionImportModule=Region Import Module
+districtImportModule=District Import Module
+clusterImportModule=Cluster Import Module
 
 
 
@@ -816,7 +820,7 @@ infoDisplayNetworkDiagram = Please maximize to view the disease transmission cha
 infoDocumentAlreadyExists = A Document with filename "%s" already exists. Overwrite?
 infoDownloadDocumentTemplateImportGuide = If this is your first time uploading document templates to SORMAS, we strongly recommend to read the document template guide first.
 infoDownloadExport = The export is being prepared. This may take a while.<br/>You can close this dialog after the download has completed.
-infoDownloadCaseImportTemplate = You can use this template .csv file to bring your data into a format SORMAS can read. Please do this every time you import data, never use a file you have downloaded before.
+infoDownloadCaseImportTemplate = You can use this template .csv file to bring your data into a format APMIS can read. Please do this every time you import data, never use a file you have downloaded before.
 infoDownloadImportTemplate = You can use this template .csv file to bring your data into a format SORMAS can read. Please do this every time you import data, never use a file you have downloaded before.
 infoDownloadErrorReport = If there were any rows that could not be imported, you will be offered a .csv file containing all these rows as well as the error descriptions.
 infoDownloadImportGuide = If this is your first time importing data into SORMAS, we strongly recommend to read the import guide first.
