--- a/sormas-api/src/main/resources/captions_fa-AF.properties
+++ b/sormas-api/src/main/resources/captions_fa-AF.properties
@@ -76,6 +76,8 @@ postCampaignForms=\u0641\u0631\u0645 \u0647\u0627\u06CC \u067E\u0633 \u0627\u063
 //nnnnnnnnnnnnn
 postCampaignDashboard=Post Campaign Dashboard
 
+actionSaveAndAddNew = Save And Add New
+
 
 postCampaignPhase=\u0645\u0631\u062D\u0644\u0647 \u067E\u0633 \u0627\u0632 \u06A9\u0645\u067E\u06CC\u0646
 associateCampaign=\u062D\u0648\u0632\u0647 \u0647\u0627\u06CC \u06A9\u0645\u067E\u06CC\u0646
@@ -163,11 +165,13 @@ userGuides=\u0631\u0627\u0647\u0646\u0645\u0627\u06CC \u06A9\u0627\u0631\u0628\u
 technicalGuides=\u0631\u0627\u0647\u0646\u0645\u0627\u06CC \u0641\u0646\u06CC
 oldPassword=\u0631\u0645\u0632 \u0639\u0628\u0648\u0631 \u0642\u062F\u06CC\u0645\u06CC
 editing=Editing: 
-apmisVersionNumber=APMIS Version Number : APMIS 5.0.0
-releaseDate=Release Date : 15/08/2023
-
-
-
+apmisVersionNumber=APMIS Version Number:
+releaseDate=Release Date:
+upload=upload
+overridaExistingEntriesWithImportedData=Override existing entries with imported data.
+downloadCredentialsButton=Download Credentials Button
+done=Done
+downloadCsv=Download CSV
 
 
 
