--- a/sormas-api/src/main/resources/strings_ps-AF.properties
+++ b/sormas-api/src/main/resources/strings_ps-AF.properties
@@ -34,11 +34,11 @@ pleaseSelectFormFirst=\u0645\u0647\u0631\u0628\u0627\u0646\u064A \u0648\u06A9\u0
 wasRemovedFromCampaign=\u0644\u0647 \u06A9\u0645\u067E\u0627\u06CC\u0646 \u0685\u062E\u0647 \u0644\u06CC\u0631\u06D0 \u0634\u0648
 newDashboardChartSuccess=\u0646\u0648\u06CC \u0689\u0634\u0628\u0648\u0631\u0689 \u0686\u0627\u0631\u067C \u067E\u0647 \u0628\u0631\u06CC\u0627\u0644\u06CC\u062A\u0648\u0628 \u0633\u0631\u0647 \u0627\u0636\u0627\u0641\u0647 \u0634\u0648
 pleaseSelectFormUpdate=\u0645\u0647\u0631\u0628\u0627\u0646\u064A \u0648\u06A9\u0693\u0626 \u062F \u062A\u0627\u0632\u0647 \u06A9\u0648\u0644\u0648 \u062F\u0645\u062E\u0647 \u06CC\u0648\u0647 \u0641\u0648\u0631\u0645\u0647 \u063A\u0648\u0631\u0647 \u06A9\u0693\u0626
-step1=2 \u06AB\u0627\u0645: \u062F \u0648\u0627\u0631\u062F\u0627\u062A\u0648 \u067C\u06CC\u0645\u067E\u0644\u06CC\u067C \u0641\u0627\u06CC\u0644 \u0689\u0627\u0648\u0646\u0644\u0648\u0689 \u06A9\u0693\u0626
+step1=1 \u06AB\u0627\u0645: \u062F \u0648\u0627\u0631\u062F\u0627\u062A\u0648 \u067C\u06CC\u0645\u067E\u0644\u06CC\u067C \u0641\u0627\u06CC\u0644 \u0689\u0627\u0648\u0646\u0644\u0648\u0689 \u06A9\u0693\u0626
 step1Description=You can use this template .csv file to bring your data into a format APMIS can read. Please do this every time you import data, never use a file you have downloaded before.
-step2=3 \u06AB\u0627\u0645: \u062F CSV \u0641\u0627\u06CC\u0644 \u0648\u0627\u0631\u062F \u06A9\u0693\u0626
+step2=2 \u06AB\u0627\u0645: \u062F CSV \u0641\u0627\u06CC\u0644 \u0648\u0627\u0631\u062F \u06A9\u0693\u0626
 stepDesciption=Depending on the amount of rows you want to import, this may take a while. You will receive a notification when the import process has finished.
-step3=4 \u06AB\u0627\u0645: \u062F \u062A\u06D0\u0631\u0648\u062A\u0646\u06D0 \u0631\u0627\u067E\u0648\u0631 \u0689\u0627\u0648\u0646\u0644\u0648\u0689 \u06A9\u0693\u0626
+step3=3 \u06AB\u0627\u0645: \u062F \u062A\u06D0\u0631\u0648\u062A\u0646\u06D0 \u0631\u0627\u067E\u0648\u0631 \u0689\u0627\u0648\u0646\u0644\u0648\u0689 \u06A9\u0693\u0626
 step3Description=If there were any rows that could not be imported, you will be offered a .csv file containing all these rows as well as the error descriptions.
 campaignNameRequired=\u062F \u06A9\u0645\u067E\u0627\u06CC\u0646 \u0646\u0648\u0645 \u0627\u0693\u06CC\u0646 \u062F\u06CC
 campaignRoundrequired=Campaign Round is Required
@@ -99,6 +99,11 @@ doYouReallyWantToChangeYourPassword=\u0627\u06CC\u0627 \u062A\u0627\u0633\u0648 
 newUserPassword=\u062F \u0646\u0648\u064A \u06A9\u0627\u0631\u0646 \u067E\u0627\u0633\u0648\u0631\u0689
 pleaseCopyPassword=\u0645\u0647\u0631\u0628\u0627\u0646\u064A \u0648\u06A9\u0693\u0626\u060C \u062F\u0627 \u067E\u0627\u0633\u0648\u0631\u0689 \u06A9\u0627\u067E\u064A \u06A9\u0693\u0626\u060C \u062F\u0627 \u06CC\u0648\u0627\u0632\u06D0 \u06CC\u0648 \u0681\u0644 \u069A\u0648\u062F\u0644 \u0634\u0648\u06CC.
 changePasswordForUser=Change Password For User:
+provinceImportModule=Province Import Module
+regionImportModule=Region Import Module
+districtImportModule=District Import Module
+clusterImportModule=Cluster Import Module
+
 
 
 
@@ -797,7 +802,7 @@ infoDisplayNetworkDiagram = Please maximize to view the disease transmission cha
 infoDocumentAlreadyExists = A Document with filename "%s" already exists. Overwrite?
 infoDownloadDocumentTemplateImportGuide = If this is your first time uploading document templates to SORMAS, we strongly recommend to read the document template guide first.
 infoDownloadExport = The export is being prepared. This may take a while.<br/>You can close this dialog after the download has completed.
-infoDownloadCaseImportTemplate = You can use this template .csv file to bring your data into a format SORMAS can read. Please do this every time you import data, never use a file you have downloaded before.
+infoDownloadCaseImportTemplate = You can use this template .csv file to bring your data into a format APMIS can read. Please do this every time you import data, never use a file you have downloaded before.
 infoDownloadImportTemplate = You can use this template .csv file to bring your data into a format SORMAS can read. Please do this every time you import data, never use a file you have downloaded before.
 infoDownloadErrorReport = If there were any rows that could not be imported, you will be offered a .csv file containing all these rows as well as the error descriptions.
 infoDownloadImportGuide = If this is your first time importing data into SORMAS, we strongly recommend to read the import guide first.
