update: form filter work in progress

--- a/sormas-api/src/main/resources/captions_en-AF.properties
+++ b/sormas-api/src/main/resources/captions_en-AF.properties
@@ -127,6 +127,7 @@ fieldInformation=Field Information
 userGuides=User Guides
 technicalGuides=Technical Guides
 oldPassword=Old Password
+userProfile=User Profile
 editing=Editing: 
 apmisVersionNumber=APMIS Version Number:
 releaseDate=Release Date:
@@ -135,6 +136,8 @@ overridaExistingEntriesWithImportedData=Override existing entries with imported 
 downloadCredentialsButton=Download Credentials Button
 done=Done
 downloadCsv=Download CSV
+
+
 
 
 
