production server patch

--- a/sormas-api/src/main/resources/captions_en-AF.properties
+++ b/sormas-api/src/main/resources/captions_en-AF.properties
@@ -128,9 +128,10 @@ userGuides=User Guides
 technicalGuides=Technical Guides
 oldPassword=Old Password
 editing=Editing: 
-apmisVersionNumber=APMIS Version Number : APMIS 5.0.0
-releaseDate=Release Date : 01/09/2023
-
+apmisVersionNumber=APMIS Version Number
+releaseDate=Release Date
+userProfile=User Profile
+support=Support
 
 
 
