--- a/sormas-api/src/main/resources/captions_ps-AF.properties
+++ b/sormas-api/src/main/resources/captions_ps-AF.properties
@@ -128,7 +128,7 @@ oldPassword=\u0632\u0648\u0693 \u067E\u067C\u0646\u0648\u0645
 editing=Editing
 userProfile=\u062F \u06A9\u0627\u0631\u0646 \u067E\u0631\u0648\u0641\u0627\u06CC\u0644
 apmisVersionNumber=\u062F APMIS \u0646\u0633\u062E\u0647 \u0634\u0645\u06CC\u0631\u0647
-
+support=Support
 
 
 
