--- a/sormas-api/src/main/resources/captions.properties
+++ b/sormas-api/src/main/resources/captions.properties
@@ -1412,6 +1412,7 @@ importSkips=%d Skipped
 importValueSeparator=Value separator
 importCancelImport=Cancel import
 infrastructureImportAllowOverwrite=Overwrite existing entries with imported data
+areaNotExistInCampaignImportError=Area is not selected for this campaign
 
 #Lab Message
 LabMessage=Lab Message
