--- a/sormas-api/src/main/resources/captions_en-AF.properties
+++ b/sormas-api/src/main/resources/captions_en-AF.properties
@@ -762,7 +762,7 @@ columnVaccineManufacturer=Vaccine manufacturer
 Community.archived=Archived
 Community.externalID=CCode
 
-communityActiveCommunities=Active clusters
+communityActiveCommunities=Active
 communityArchivedCommunities=Archived clusters
 communityAllCommunities=All clusters
 
@@ -1129,7 +1129,7 @@ DiseaseBurden.outbreakDistrictCount=Outbreak districts
 DiseaseBurden.previousCaseCount=Previous cases
 
 # District
-districtActiveDistricts=Active districts
+districtActiveDistricts=Active
 districtArchivedDistricts=Archived districts
 districtAllDistricts=All districts
 
