--- a/sormas-api/src/main/resources/captions_en-AF.properties
+++ b/sormas-api/src/main/resources/captions_en-AF.properties
@@ -50,6 +50,9 @@ campaignStatus=Campaign Status
 addNewForm=Add New Forms
 campaignBasics=Campaign Basics
 uuid=UUID
+preCampaign=Pre-Campaign
+intraCampaign=Intra-Campaign
+postCampaign=Post-Campaign 
 preCampaignForms=Pre Campaign Forms
 preCampaignDashboard=Pre Campaign Dashboard
 preCampaignPhase=Pre-Campaign Phase
