--- a/sormas-api/src/main/resources/captions_fa-AF.properties
+++ b/sormas-api/src/main/resources/captions_fa-AF.properties
@@ -61,6 +61,9 @@ addNewForm=Add New Forms
 campaignBasics=Campaign Basics
 uuid=UUID
 
+preCampaign=Pre-Campaign
+intraCampaign=Intra-Campaign
+postCampaign=Post-Campaign
 preCampaignForms=\u0641\u0631\u0645 \u0647\u0627\u06CC \u0642\u0628\u0644 \u0627\u0632 \u06A9\u0645\u067E\u06CC\u0646
 preCampaignDashboard=\u062F\u0627\u0634\u0628\u0648\u0631\u062F \u0642\u0628\u0644 \u0627\u0632 \u06A9\u0645\u067E\u06CC\u0646
 preCampaignPhase=\u0645\u0631\u062D\u0644\u0647 \u0642\u0628\u0644 \u0627\u0632 \u06A9\u0645\u067E\u06CC\u0646
