update: i18n further added

--- a/sormas-api/src/main/resources/captions_fa-AF.properties
+++ b/sormas-api/src/main/resources/captions_fa-AF.properties
@@ -174,7 +174,7 @@ overridaExistingEntriesWithImportedData=Override existing entries with imported 
 downloadCredentialsButton=Download Credentials Button
 done=Done
 downloadCsv=Download CSV
-
+log=Log
 
 
 
