--- a/sormas-api/src/main/resources/strings_en-AF.properties
+++ b/sormas-api/src/main/resources/strings_en-AF.properties
@@ -25,6 +25,9 @@ active = Active
 #New added by Yahaya, end by the next big space 
 dataSavedSuccessfully=Data saved Successfully
 openCampaign=Open Campaign
+closeCampaign=Close Campaign
+publish=Publish
+unpublish=Un-Publish
 duplicate=Duplicate
 campaignDataUpdated=Campaign Data Updated
 campaignDataSaved=Campaign Data Saved
