--- a/sormas-api/src/main/resources/strings_fa-AF.properties
+++ b/sormas-api/src/main/resources/strings_fa-AF.properties
@@ -25,6 +25,9 @@ active = Active
 #New added by Yahaya, end by the next big space 
 dataSavedSuccessfully=\u062F\u0627\u062F\u0647 \u0647\u0627 \u0628\u0627 \u0645\u0648\u0641\u0642\u06CC\u062A \u0630\u062E\u06CC\u0631\u0647 \u0634\u062F
 openCampaign=\u0628\u0627\u0632 \u06A9\u0631\u062F\u0646 \u06A9\u0645\u067E\u06CC\u0646
+closeCampaign=Close Campaign
+publish=Publish
+unpublish=Un-Publish
 duplicate=\u062F\u0648\u0628\u0644
 
 //nnnnnnnnnnnnn
