--- a/sormas-api/src/main/resources/strings_ps-AF.properties
+++ b/sormas-api/src/main/resources/strings_ps-AF.properties
@@ -25,6 +25,9 @@ active = ÙØ¹Ø§Ù„Ù‡ Ù¾ÛŒÚšÙ
 #New added by Yahaya, end by the next big space 
 dataSavedSuccessfully=\u0689\u0627\u067C\u0627 \u067E\u0647 \u0628\u0631\u06CC\u0627\u0644\u06CC\u062A\u0648\u0628 \u0633\u0631\u0647 \u062E\u0648\u0646\u062F\u064A \u0634\u0648\u0647‡
 openCampaign=\u06A9\u0645\u067E\u0627\u06CC\u0646 \u067E\u0631\u0627\u0646\u06CC\u0632\u064A
+closeCampaign=\u06A9\u0645\u067E\u0627\u06CC\u0646 \u0628\u0646\u062F \u06A9\u0693\u0626
+publish=\u062E\u067E\u0648\u0631 \u06A9\u0693\u0626
+unpublish=\u0646\u0647 \u062E\u067E\u0631\u0648\u0644
 duplicate=\u0689\u0628\u0644
 campaignDataUpdated=Campaign Data Updated
 campaignDataSaved=Campaign Data Saved
