- Updating System Caption

--- a/sormas-api/src/main/resources/captions_en-AF.properties
+++ b/sormas-api/src/main/resources/captions_en-AF.properties
@@ -17,6 +17,8 @@
 
 # General Captions
 all=All
+archived=Archived
+active=Active
 area=Region
 city=City
 postcode=Postcode
@@ -75,7 +77,7 @@ phoneNumber=Phone number
 changePassword=Change Password
 mobileUserGuide=Mobile User Guide
 exportFormGlossary=Export Forms & Diagrams Glossary
-relevanceStatus=Relevance Status
+relevanceStatus=Active Status
 addNewCluster=Add New Cluster
 errorArchiving=Error Archiving
 notValidValue=Not Valid Value: 
@@ -263,6 +265,7 @@ actionConfirmFilters=Confirm filters
 actionResetFilters=Reset filters
 actionApplyFilters=Apply filters
 actionSave=Save
+actionAdd=Add
 actionSelectAll=Select all
 actionShowLessFilters=Show Less Filters
 actionShowMoreFilters=Show More Filters
@@ -771,8 +774,8 @@ Community.archived=Archived
 Community.externalID=CCode
 
 communityActiveCommunities=Active
-communityArchivedCommunities=Archived clusters
-communityAllCommunities=All clusters
+communityArchivedCommunities=Archived
+communityAllCommunities=All
 
 # Configuration
 Configuration.Facilities=Facilities
@@ -1138,8 +1141,8 @@ DiseaseBurden.previousCaseCount=Previous cases
 
 # District
 districtActiveDistricts=Active
-districtArchivedDistricts=Archived districts
-districtAllDistricts=All districts
+districtArchivedDistricts=Archived
+districtAllDistricts=All
 
 District.archived=Archived
 District.epidCode=Code No
