--- a/sormas-api/src/main/resources/enum_ps-AF.properties
+++ b/sormas-api/src/main/resources/enum_ps-AF.properties
@@ -1380,7 +1380,7 @@ UserRightGroup.USER_MANAGEMENT = User Management
 UserRole.ADMIN = \u0627\u0689\u0645\u06CC\u0646
 UserRole.CASE_OFFICER = \u062F \u0642\u0636\u06CC\u06D0 \u0627\u0641\u0633\u0631
 UserRole.CASE_SUPERVISOR = \u06A9\u0644\u06CC\u0646\u06CC\u06A9\u0631
-UserRole.COMMUNITY_INFORMANT = Admin National Coordinator 
+UserRole.COMMUNITY_INFORMANT = \u062F \u0645\u0644\u064A \u0645\u0639\u0644\u0648\u0645\u0627\u062A\u0648 \u0645\u062F\u06CC\u0631
 UserRole.COMMUNITY_OFFICER = \u062F \u067C\u0648\u0644\u0646\u06D0 \u0631\u06CC\u06CC\u0633
 UserRole.CONTACT_OFFICER = \u062F \u0627\u0693\u06CC\u06A9\u0648 \u0627\u0641\u0633\u0631
 UserRole.CONTACT_SUPERVISOR = \u062F \u0685\u0627\u0631\u0648\u0646\u06A9\u064A \u0633\u0631\u0647 \u0627\u0693\u06CC\u06A9\u0647 \u0648\u0646\u06CC\u0633\u0626
@@ -1405,7 +1405,7 @@ UserRole.AREA_ADMIN_SUPERVISOR = \u062F \u0627\u062F\u0627\u0631\u06D0 \u0633\u0
 UserRole.AREA_SURVEILLANCE_SUPERVISOR = \u0633\u06CC\u0645\u0647 \u0627\u06CC\u0632 \u0647\u0645\u063A\u0696\u064A \u06A9\u0648\u0648\u0646\u06A9\u064A
 UserRole.REST_USER = \u062F \u0645\u0648\u0628\u0627\u06CC\u0644 \u06A9\u0627\u0631\u0648\u0648\u0646\u06A9\u064A
 UserRole.SORMAS_TO_SORMAS_CLIENT = Sormas \u062A\u0647 Sormas \u067E\u06CC\u0631\u0648\u062F\u0648\u0646\u06A9\u064A
-UserRole.ADMIN_SUPERVISOR = Admin Surveillance Supervisor
+UserRole.ADMIN_SUPERVISOR = \u062F \u0627\u062F\u0627\u0631\u06D0 \u062F \u0685\u0627\u0631\u0646\u06D0 \u0685\u0627\u0631\u0648\u0646\u06A9\u06CC
 UserRole.BAG_USER = BAG User
 UserRole.Short.ADMIN = \u0627\u0689\u0645\u06CC\u0646
 UserRole.Short.CASE_OFFICER = CaseOff
