- updating timeliness report captions

--- a/sormas-api/src/main/resources/captions_en-AF.properties
+++ b/sormas-api/src/main/resources/captions_en-AF.properties
@@ -108,6 +108,9 @@ icmRevisits=ICM Revisits
 icmSupervisorMonitoring=ICM Supervisor Monitoring
 icmTeamMonitoring=ICM Team Monitoring
 aggregateReport=Aggregate Report
+dataTimeliness =Data Timeliness Report
+dataTimeLinessLateFormCount=Late Form Count
+percentage=Percentage
 dataCompleteness=ICM Data Completeness
 adminDataCompleteness=Admin Data Completeness
 mobileUsers=Mobile Users
