--- a/sormas-api/src/main/resources/captions_fa-AF.properties
+++ b/sormas-api/src/main/resources/captions_fa-AF.properties
@@ -107,6 +107,7 @@ archiveCluster=Archive Cluster
 archiveSelectedCluster=Archive Selected Clusters
 dearchiveSelectedClusters=De-Archive Selected Clusters
 
+
 risk=\u062E\u0637\u0631
 
 //nnnnnnnnnnn
@@ -139,6 +140,10 @@ icmTeamMonitoring=\u0627\u0631\u0632\u06CC\u0627\u0628\u06CC \u062A\u06CC\u0645 
 aggregateReport=\u06AF\u0632\u0627\u0631\u0634 \u06A9\u0644
 dataCompleteness=\u062A\u0645\u0627\u0645\u06CC\u062A \u062F\u0627\u062F\u0647 \u0647\u0627
 mobileUsers=\u06A9\u0627\u0631\u0628\u0631\u0627\u0646 \u0645\u0628\u0627\u06CC\u0644
+dataTimeliness =Data Timeliness Report
+dataTimeLinessLateFormCount=Late Form Count
+percentage=Percentage
+
 
 //nnnnnnnnnnnn
 errorStatus=Error Status
