--- a/sormas-api/src/main/resources/captions_ps-AF.properties
+++ b/sormas-api/src/main/resources/captions_ps-AF.properties
@@ -106,6 +106,9 @@ icmSupervisorMonitoring=\u062F \u06A9\u0645\u067E\u0627\u06CC\u0646 \u067E\u0647
 icmTeamMonitoring=\u062F \u06A9\u0645\u067E\u0627\u06CC\u0646 \u067E\u0647 \u062C\u0631\u06CC\u0627\u0646 \u06A9\u06D0 \u062F \u067C\u06CC\u0645 \u0627\u0631\u0632\u0648\u0646\u0647
 aggregateReport=\u067C\u0648\u0644\u06CC\u0632 \u0631\u0627\u067E\u0648\u0631
 dataCompleteness=\u062F \u0645\u0639\u0644\u0648\u0645\u0627\u062A\u0648 \u0628\u0634\u067E\u0693\u062A\u06CC\u0627
+dataTimeliness =Data Timeliness Report
+dataTimeLinessLateFormCount=Late Form Count
+percentage=Percentage
 mobileUsers=\u062F \u0645\u0648\u0628\u0627\u06CC\u0644 \u06A9\u0627\u0631\u0648\u0648\u0646\u06A9\u064A
 errorStatus=Error Status
 message=\u067E\u06CC\u063A\u0627\u0645
