fix: Logout button text yes option: change button to "Logout now" #598

--- a/sormas-api/src/main/resources/captions_fa-AF.properties
+++ b/sormas-api/src/main/resources/captions_fa-AF.properties
@@ -183,7 +183,7 @@ downloadCredentialsButton=Download Credentials Button
 done=Done
 downloadCsv=Download CSV
 log=Log
-
+logoutnow=Logout Now
 
 
 
