--- a/sormas-api/src/main/resources/captions_en-AF.properties
+++ b/sormas-api/src/main/resources/captions_en-AF.properties
@@ -200,6 +200,7 @@ account=Account
 
 # About
 about=About
+userActivitySummary= User Activity
 aboutAdditionalInfo=Additional Info
 aboutCopyright=Copyright
 aboutDocuments=Documents
