--- a/sormas-api/src/main/resources/captions_fa-AF.properties
+++ b/sormas-api/src/main/resources/captions_fa-AF.properties
@@ -183,7 +183,7 @@ downloadCredentialsButton=Download Credentials Button
 done=Done
 downloadCsv=Download CSV
 log=Log
-logoutnow=Logout Now
+logoutnow=\u0627\u06A9\u0646\u0648\u0646 \u062E\u0627\u0631\u062C \u0634\u0648\u06CC\u062F
 
 
 
