--- a/sormas-api/src/main/resources/captions_en-AF.properties
+++ b/sormas-api/src/main/resources/captions_en-AF.properties
@@ -248,6 +248,7 @@ actionContinue=Continue
 actionCreate=Create
 actionDearchive=De-Archive
 actionDelete=Delete
+actionVerify=Verify & Publish
 actionDeselectAll=Deselect all
 actionDeselectAndContinue=Deselect and continue
 actionDisable=Disable
