--- a/sormas-backend/pom.xml
+++ b/sormas-backend/pom.xml
@@ -51,7 +51,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.geotools</groupId>
+			<groupId>org.geotools-l</groupId>
 			<artifactId>gt-shapefile</artifactId>
 		</dependency>
 
