--- a/sormas-base/build.xml
+++ b/sormas-base/build.xml
@@ -123,10 +123,8 @@
 
 	<target name="collect-artifacts" description="Collects artifacts">
 		<ant dir="../sormas-ear" target="3-collect" />
-		<ant dir="../sormas-ui" target="3-collect" />
+		<ant dir="../apmis-flow" target="3-collect" />
 		<ant dir="../sormas-rest" target="3-collect" />
-		<ant dir="../sormas-app" target="3-collect" />
-		<ant dir="../sormas-keycloak-service-provider" target="3-collect" />
 	</target>
 
 	<target name="collect-all" description="collects all serverlibs, bundles and so on for the setup-script.">
