- coniguring bulk edit functionality

--- a/sormas-api/src/main/resources/captions_en-AF.properties
+++ b/sormas-api/src/main/resources/captions_en-AF.properties
@@ -256,6 +256,9 @@ actionDiscard=Discard Changes
 actionGenerateNewPassword=Generate new password
 actionGenerateNewPasswords=Generate new passwords
 actionEnable=Enable
+actionEnableUsers=Enable Users
+actionDisableUsers=Disable Users
+actionBulkEditUserFormFields=Update Users Data
 actionGenerate=Generate
 actionImport=Import
 actionImportAllCountries=Import default countries
@@ -1551,6 +1554,7 @@ importDuplicates=%d Skipped as Duplicates
 importErrorDescription=Error description
 importErrors=%d Error(s)
 importImportData=Start Data Import
+reviewUpdatedData=Review Updated Users
 importImports=%d Imported
 importLineListing=Line Listing Import
 importProcessed=%d/%d Processed
