--- a/sormas-api/src/main/resources/strings_en-AF.properties
+++ b/sormas-api/src/main/resources/strings_en-AF.properties
@@ -827,6 +827,8 @@ infoImportAllCountries = This will import all countries which are currently WHO 
 infoImportAllContinents = This will import all default continents. You will receive a notification when the import process has finished.
 infoImportAllSubcontinents = This will import all default subcontinents. You will receive a notification when the import process has finished.
 infoImportCsvFile = Depending on the amount of rows you want to import, this may take a while. You will receive a notification when the import process has finished.
+updateUserFormField = Complete the form fields that you want to link with the chosen users.
+selectFormField = Select the form field you wish to modify for the selected users. Please note that only one form field can be updated at a time.
 infoImportInfrastructureAllowOverwrite = Select this option if existing data should be overwritten with data from the import file. If an existing entry (based on the name or ISO/UNO-Code if available ) is found, all data will be updated with the content of the import file (if available). If no existing entry is found, a new one will be created.
 infoImportProcess = %d rows are being imported. The import process might take a while.<br/>You will be able to review and solve any errors after the import process has been completed.
 infoImportSimilarity = One of the cases you tried to import is similar to an already existing case in the SORMAS database. Please check whether the case to import is a duplicate of any of the cases in the list and, if so, select that case and confirm.
