fix: premliminary fix for #359 and #360

--- a/sormas-app/app/src/main/AndroidManifest.xml
+++ b/sormas-app/app/src/main/AndroidManifest.xml
@@ -439,7 +439,14 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-
+        <receiver
+            android:name="com.google.firebase.iid.FirebaseInstanceIdReceiver"
+            android:exported="true"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+            </intent-filter>
+        </receiver>
         <!--
              Optionally, register AnalyticsReceiver and AnalyticsService to support background
              dispatching on non-Google Play devices
@@ -478,7 +485,6 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
-
         <service
             android:enabled="true"
             android:name=".core.TaskNotificationService" />
@@ -491,7 +497,14 @@
         <!--<service-->
             <!--android:name=".core.TaskNotificationService"-->
             <!--android:enabled="true" />-->
-
+        <service
+            android:name=".MyFirebaseMessagingService"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
         <service
             android:name=".LbdsRecevierComponent"
             android:enabled="true"
