--- a/apmis-flow/pom.xml
+++ b/apmis-flow/pom.xml
@@ -117,11 +117,11 @@
 			<version>1.4.1</version>
 		</dependency-->
 		<dependency>
-    <groupId>org.projectlombok</groupId>
-    <artifactId>lombok</artifactId>
-    <version>1.18.30</version>
-</dependency>
-<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.30</version>
+		</dependency>
+		<dependency>
 			<groupId>org.vaadin.addons.flowingcode</groupId>
 			<artifactId>grid-helpers</artifactId>
 			<version>1.1.1</version>
@@ -132,35 +132,35 @@
 			<version>5.2.3</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.apache.poi</groupId>
-		    <artifactId>poi-ooxml</artifactId>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
 			<version>5.2.3</version>
 		</dependency>
-		
-				<dependency>
-		  <groupId>com.opencsv</groupId>
-		  <artifactId>opencsv</artifactId>
-		  <version>5.6</version>
+
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>5.6</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.docx4j</groupId>
-		    <artifactId>docx4j-JAXB-Internal</artifactId>
-		    <version>8.3.8</version>
+			<groupId>org.docx4j</groupId>
+			<artifactId>docx4j-JAXB-Internal</artifactId>
+			<version>8.3.8</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.docx4j</groupId>
-		    <artifactId>docx4j-JAXB-ReferenceImpl</artifactId>
-		    <version>8.3.8</version>
+			<groupId>org.docx4j</groupId>
+			<artifactId>docx4j-JAXB-ReferenceImpl</artifactId>
+			<version>8.3.8</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.docx4j</groupId>
-		    <artifactId>docx4j-JAXB-MOXy</artifactId>
-		    <version>8.3.8</version>
+			<groupId>org.docx4j</groupId>
+			<artifactId>docx4j-JAXB-MOXy</artifactId>
+			<version>8.3.8</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.docx4j</groupId>
-		    <artifactId>docx4j-export-fo</artifactId>
-		    <version>8.3.8</version>
+			<groupId>org.docx4j</groupId>
+			<artifactId>docx4j-export-fo</artifactId>
+			<version>8.3.8</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
@@ -222,11 +222,11 @@
 			<version>5.1.0</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
-   			<groupId>com.vaadin.componentfactory</groupId>
-   			<artifactId>tooltip</artifactId>
-   			<version>22.0.1</version>
+			<groupId>com.vaadin.componentfactory</groupId>
+			<artifactId>tooltip</artifactId>
+			<version>22.0.1</version>
 		</dependency>
 
 
@@ -322,6 +322,12 @@
 			<groupId>io.jsondb</groupId>
 			<artifactId>jsondb-core</artifactId>
 			<version>1.0.106</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>6.1.3</version>
 		</dependency>
 
 	</dependencies>
