--- a/apmis-flow/src/main/resources/application.properties
+++ b/apmis-flow/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 #firbase secret key
-fcm.secret.key=AAAA6WgmWr4:APA91bHs3bQ5tvmXzyNt8xBhxHk6AwSjAFyAfypRl-1aOO2NYnfn9_d5khmLmqWdsbfePdyVDIzTggQTOl03KkHnHWdoXF-q7t1Zmx7jrwzVVvz4QJonxp5qnvhKcWD9_yKeY-IvMPuz
+fcm.secret.key=
