--- a/sormas-api/src/main/resources/captions_en-AF.properties
+++ b/sormas-api/src/main/resources/captions_en-AF.properties
@@ -248,7 +248,8 @@ actionContinue=Continue
 actionCreate=Create
 actionDearchive=De-Archive
 actionDelete=Delete
-actionVerify=Verify & Publish
+actionVerify=Verify Data
+actionPublishData=Publish Data
 actionDeselectAll=Deselect all
 actionDeselectAndContinue=Deselect and continue
 actionDisable=Disable
