- preparing to release

--- a/apmis-flow/pom.xml
+++ b/apmis-flow/pom.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
+                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <!-- Your project information, dependencies, build configuration, etc. go here -->
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.symeda.sormas</groupId>
@@ -8,8 +12,7 @@
 	<version>1.0.32</version>
 	<packaging>war</packaging>
 
-
-	<properties>
+<properties>
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -26,7 +29,7 @@
 			<id>central</id>
 			<url>https://repo.maven.apache.org/maven2</url>
 			<snapshots>
-				<enabled>false</enabled>
+				<enabled>true</enabled>
 			</snapshots>
 		</repository>
 		<repository>
