--- a/sormas-api/src/main/resources/enum_en-AF.properties
+++ b/sormas-api/src/main/resources/enum_en-AF.properties
@@ -1401,6 +1401,7 @@ UserRole.SURVEILLANCE_OFFICER = District Officer
 UserRole.SURVEILLANCE_SUPERVISOR = Provincial Officer
 UserRole.REST_EXTERNAL_VISITS_USER = Partners
 UserRole.REST_USER = Mobile User
+UserRole.PUBLISH_USER = Publish User
 UserRole.SORMAS_TO_SORMAS_CLIENT = Sormas to Sormas Client
 UserRole.ADMIN_SUPERVISOR = Provincial Data Clerk
 UserRole.AREA_STATE_OBSERVER = Regional Observer
