--- a/sormas-api/src/main/resources/enum_en-NG.properties
+++ b/sormas-api/src/main/resources/enum_en-NG.properties
@@ -1401,6 +1401,7 @@ UserRole.SURVEILLANCE_OFFICER = Surveillance Officer
 UserRole.SURVEILLANCE_SUPERVISOR = Surveillance Supervisor
 UserRole.REST_EXTERNAL_VISITS_USER = External Visits User
 UserRole.REST_USER = Mobile User
+UserRole.PUBLISH_USER = Publish User
 UserRole.SORMAS_TO_SORMAS_CLIENT = Sormas to Sormas Client
 UserRole.ADMIN_SUPERVISOR = Admin Surveillance Supervisor
 UserRole.BAG_USER = BAG User
