--- a/sormas-app/app/build.gradle
+++ b/sormas-app/app/build.gradle
@@ -12,8 +12,8 @@ android {
     buildToolsVersion '28.0.3'
 
     defaultConfig {
-        applicationId "de.symeda.sormas.app.debug"
-//        applicationId "de.symeda.sormas.app.apmis"
+ //       applicationId "de.symeda.sormas.app.debug"
+        applicationId "de.symeda.sormas.app.apmis"
         minSdkVersion 26
         targetSdkVersion 29
         versionCode buildVersionCode()
