--- a/apmis-flow/pom.xml
+++ b/apmis-flow/pom.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <!-- Your project information, dependencies, build configuration, etc. go here -->
+	<!-- Your project information, dependencies, build configuration, etc. go here -->
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.symeda.sormas</groupId>
@@ -12,13 +10,13 @@
 	<version>1.0.34</version>
 	<packaging>war</packaging>
 
-<properties>
+	<properties>
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<failOnMissingWebXml>false</failOnMissingWebXml>
-
+		<junit.jupiter.version>5.4.0</junit.jupiter.version>
 		<vaadin.version>23.3.6</vaadin.version>
 		<drivers.downloader.phase>pre-integration-test</drivers.downloader.phase>
 	</properties>
@@ -335,6 +333,23 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 			<version>6.1.3</version>
+		</dependency>
+
+		<!-- Junit -->
+
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>${junit.jupiter.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>${junit.jupiter.version}</version>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
