- Updating Data Dry Run Functionality Including addition of Floating Status for Clusters

--- a/sormas-api/src/main/resources/captions_en-AF.properties
+++ b/sormas-api/src/main/resources/captions_en-AF.properties
@@ -785,6 +785,10 @@ communityActiveCommunities=Active
 communityArchivedCommunities=Archived
 communityAllCommunities=All
 
+floatingNormal = Normal
+floatingFloat = Floating
+floatStatus = Float Status
+
 # Configuration
 Configuration.Facilities=Facilities
 Configuration.Outbreaks=Outbreaks
