--- a/sormas-api/src/main/resources/strings_zu-ZA.properties
+++ b/sormas-api/src/main/resources/strings_zu-ZA.properties
@@ -457,6 +457,7 @@ headingHowToMergeCases = How to Merge Cases
 headingExplanationOfTerms = Explanation of Terms
 headingCompleteness = Completeness
 headingDataImport = Data import
+headingDataDryRunImport = Data Dry Run
 headingDisableLineListing = Disable Line Listing?
 headingEditLineListing = Edit Line Listing
 headingInvalidDateEntered = Invalid Date Entered
