fix: Configuration > Change Log > sort by date not working #717 & Change tab label "Configuration" to "Geography" #715

--- a/sormas-api/src/main/resources/captions_fa-AF.properties
+++ b/sormas-api/src/main/resources/captions_fa-AF.properties
@@ -1682,7 +1682,8 @@ mainMenuAbout=در باره
 mainMenuCampaigns=کمپاین ها 
 mainMenuPersons=اشخاص
 mainMenuCases=واقعه ها 
-mainMenuConfiguration=تنظیم کردن 
+mainMenuConfiguration=Geography
+#mainMenuConfiguration=تنظیم کردن 
 mainMenuContacts=ارتباطات 
 mainMenuDashboard=دشبورد 
 mainMenuEntries=Entries
